--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <h1>Path to Success</h1>
-        <p>Unlock your full potential with personalized life coaching</p>
+        <div class="subheading">Unlock your full potential with personalized life coaching</div>
         <button class="menu-button">Menu</button>
-    </header>
+    </header>    
 
     <nav>
         <ul>
