--- a/index.html
+++ b/index.html
@@ -1,96 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Path to Success - Life Coaching</title>
-    <meta name="description" content="Unlock your full potential with personalized life coaching. Discover services tailored to your personal, career, and relationship growth.">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Path to Success - Life Coaching</title>
+  <meta
+    name="description"
+    content="Unlock your full potential with personalized life coaching. Discover services tailored to your personal, career, and relationship growth."
+  />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>Path to Success</h1>
-        <div class="subheading">Unlock your full potential with personalized life coaching</div>
-    </header>    
-
+  <!-- Combined Header + Subheading + Navigation -->
+  <header>
+    <h1>Path to Success</h1>
+    <div class="subheading">Unlock your full potential with personalized life coaching</div>
     <nav>
-        <button class="menu-button">Menu</button> <!-- Moved inside nav -->
-        <ul>
-            <li><a href="#services">Our Services</a></li>
-            <li><a href="#why-choose-us">Why Choose Us</a></li>
-            <li><a href="#pricing">Prices</a></li>
-            <li><a href="#contact">Take the First Step</a></li>
-        </ul>
+      <button class="menu-button">Menu</button>
+      <ul>
+        <li><a href="#services">Our Services</a></li>
+        <li><a href="#why-choose-us">Why Choose Us</a></li>
+        <li><a href="#pricing">Prices</a></li>
+        <li><a href="#contact">Take the First Step</a></li>
+      </ul>
     </nav>
+  </header>
 
-    <main>
-        <section id="services">
-            <header>
-                <h2>Our Services</h2>
-            </header>
+  <main>
+    <!-- Services: 4 columns at XL for One-on-One, Group, Workshops, Online -->
+    <section id="services">
+      <h2>Our Services</h2>
 
-            <div class="category">
-                <h3>One-on-One Coaching</h3>
-                <article><img src="images/personal-development.png" alt="Teal icon of a smiling face"><h3>Personal Development</h3><p>Identify and overcome obstacles...</p></article>
-                <article><img src="images/career-coaching.png" alt="Lavender icon of a briefcase"><h3>Career Coaching</h3><p>Feeling stuck in your career?...</p></article>
-                <article><img src="images/relationship-coaching.png" alt="Pink icon of a heart"><h3>Relationship Coaching</h3><p>Enhance your relationships...</p></article>
-            </div>
+      <!-- One-on-One Coaching -->
+      <div class="category">
+        <h3>One-on-One Coaching</h3>
+        <article>
+          <img
+            src="images/personal-development.png"
+            alt="Teal icon of a smiling face"
+          />
+          <h4>Personal Development</h4>
+          <p>Identify and overcome obstacles holding you back from living your best life...</p>
+        </article>
+        <article>
+          <img
+            src="images/career-coaching.png"
+            alt="Lavender icon of a briefcase"
+          />
+          <h4>Career Coaching</h4>
+          <p>Feeling stuck in your career? We'll help you clarify your goals...</p>
+        </article>
+        <article>
+          <img
+            src="images/relationship-coaching.png"
+            alt="Pink icon of a heart"
+          />
+          <h4>Relationship Coaching</h4>
+          <p>Enhance your relationships with better communication and empathy...</p>
+        </article>
+      </div>
 
-            <div class="category">
-                <h3>Group Coaching</h3>
-                <article><img src="images/supportive-community.png" alt="Yellow icon of hands clasping"><h3>Supportive Community</h3><p>Join a group of like-minded individuals...</p></article>
-                <article><img src="images/focused-session.png" alt="Teal icon of a clock face"><h3>Focused Sessions</h3><p>Our group coaching sessions focus on...</p></article>
-            </div>
+      <!-- Group Coaching -->
+      <div class="category">
+        <h3>Group Coaching</h3>
+        <article>
+          <img
+            src="images/supportive-community.png"
+            alt="Yellow icon of hands clasping"
+          />
+          <h4>Supportive Community</h4>
+          <p>Join a group of like-minded individuals on a similar journey...</p>
+        </article>
+        <article>
+          <img
+            src="images/focused-session.png"
+            alt="Teal icon of a clock face"
+          />
+          <h4>Focused Sessions</h4>
+          <p>Our group coaching sessions focus on specific themes like...</p>
+        </article>
+      </div>
 
-            <div class="category">
-                <h3>Workshops & Seminars</h3>
-                <article><img src="images/interactive-learning.png" alt="Lavender icon of text conversation"><h3>Interactive Learning</h3><p>Participate in our interactive workshops...</p></article>
-            </div>
+      <!-- Workshops & Seminars -->
+      <div class="category">
+        <h3>Workshops & Seminars</h3>
+        <article>
+          <img
+            src="images/interactive-learning.png"
+            alt="Lavender icon of text conversation"
+          />
+          <h4>Interactive Learning</h4>
+          <p>Participate in our interactive workshops and seminars...</p>
+        </article>
+      </div>
 
-            <div class="category">
-                <h3>Online Courses</h3>
-                <article><img src="images/flexible-learning.png" alt="Pink icon of a curly arrow"><h3>Flexible Learning</h3><p>Access our online courses at your convenience...</p></article>
-            </div>
-        </section>
+      <!-- Online Courses -->
+      <div class="category">
+        <h3>Online Courses</h3>
+        <article>
+          <img
+            src="images/flexible-learning.png"
+            alt="Pink icon of a curly arrow"
+          />
+          <h4>Flexible Learning</h4>
+          <p>Access our online courses at your convenience...</p>
+        </article>
+      </div>
+    </section>
 
-        <section id="why-choose-us">
-            <header>
-                <h2>Why Choose Us</h2>
-            </header>
-            <div class="why-grid">
-                <div class="why-box">Personalized Approach</div>
-                <div class="why-box">Proven Results</div>
-                <div class="why-box">Supportive Environment</div>
-                <div class="why-box">Flexible Options</div>
-            </div>
-        </section>
+    <!-- Why Choose Us -->
+    <section id="why-choose-us">
+      <h2>Why Choose Us</h2>
+      <div class="why-grid">
+        <div class="why-box">Personalized Approach</div>
+        <div class="why-box">Proven Results</div>
+        <div class="why-box">Supportive Environment</div>
+        <div class="why-box">Flexible Options</div>
+      </div>
+    </section>
 
-        <section id="pricing">
-            <header>
-                <h2>Pricing</h2>
-            </header>
-            <div class="pricing-grid">
-                <table><thead><tr><th>Service</th><th>Cost</th></tr></thead><tbody><tr><td>Single Session</td><td>$150</td></tr><tr><td>Monthly Package</td><td>$550</td></tr><tr><td>3-month Package</td><td>$1500</td></tr></tbody></table>
-                <table><thead><tr><th>Service</th><th>Cost</th></tr></thead><tbody><tr><td>Single Session</td><td>$75</td></tr><tr><td>Monthly Package</td><td>$250</td></tr></tbody></table>
-                <table><thead><tr><th>Service</th><th>Cost</th></tr></thead><tbody><tr><td>Single Workshop</td><td>$150</td></tr><tr><td>Seminar Series</td><td>$250</td></tr></tbody></table>
-                <table><thead><tr><th>Service</th><th>Cost</th></tr></thead><tbody><tr><td>Single Workshop</td><td>$150</td></tr><tr><td>Webinar Series</td><td>$250</td></tr></tbody></table>
-            </div>
-        </section>
+    <!-- Pricing -->
+    <section id="pricing">
+      <h2>Pricing</h2>
+      <div class="pricing-grid">
+        <table>
+          <thead>
+            <tr><th>Service</th><th>Cost</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>Single Session</td><td>$150</td></tr>
+            <tr><td>Monthly Package</td><td>$550</td></tr>
+            <tr><td>3-month Package</td><td>$1500</td></tr>
+          </tbody>
+        </table>
 
-        <section id="contact">
-            <header>
-                <h2>Take the First Step Today</h2>
-            </header>
-            <p>Your journey to a more fulfilling life begins with a single step...</p>
-            <div class="schedule-button-container">
-                <button class="schedule-button">Schedule Now</button>
-            </div>
-        </section>
-    </main>
+        <table>
+          <thead>
+            <tr><th>Service</th><th>Cost</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>Single Session</td><td>$75</td></tr>
+            <tr><td>Monthly Package</td><td>$250</td></tr>
+          </tbody>
+        </table>
 
-    <footer>
-        <p>&copy; 2024 Path to Success</p>
-        <p><a href="#">Terms and Conditions</a></p>
-    </footer>
+        <table>
+          <thead>
+            <tr><th>Service</th><th>Cost</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>Single Workshop</td><td>$150</td></tr>
+            <tr><td>Seminar Series</td><td>$250</td></tr>
+          </tbody>
+        </table>
+
+        <table>
+          <thead>
+            <tr><th>Service</th><th>Cost</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>Single Workshop</td><td>$150</td></tr>
+            <tr><td>Webinar Series</td><td>$250</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- CTA: Take the First Step Today -->
+    <section id="contact">
+      <h2>Take the First Step Today</h2>
+      <p>Your journey to a more fulfilling life begins with a single step...</p>
+      <div class="schedule-button-container">
+        <button class="schedule-button">Schedule Now</button>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Path to Success</p>
+    <p><a href="#">Terms and Conditions</a></p>
+  </footer>
 </body>
 </html>
