--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Combined Header + Subheading + Navigation -->
   <header>
     <h1>Path to Success</h1>
     <div class="subheading">Unlock your full potential with personalized life coaching</div>
@@ -27,88 +26,88 @@
   </header>
 
   <main>
-    <!-- Services: 4 columns at XL for One-on-One, Group, Workshops, Online -->
     <section id="services">
       <h2>Our Services</h2>
+      <!-- New wrapper for the four columns -->
+      <div class="services-grid">
+        <!-- One-on-One Coaching -->
+        <div class="category">
+          <h3>One-on-One Coaching</h3>
+          <article>
+            <img
+              src="images/personal-development.png"
+              alt="Teal icon of a smiling face"
+            />
+            <h4>Personal Development</h4>
+            <p>Identify and overcome obstacles holding you back from living your best life...</p>
+          </article>
+          <article>
+            <img
+              src="images/career-coaching.png"
+              alt="Lavender icon of a briefcase"
+            />
+            <h4>Career Coaching</h4>
+            <p>Feeling stuck in your career? We'll help you clarify your goals...</p>
+          </article>
+          <article>
+            <img
+              src="images/relationship-coaching.png"
+              alt="Pink icon of a heart"
+            />
+            <h4>Relationship Coaching</h4>
+            <p>Enhance your relationships with better communication and empathy...</p>
+          </article>
+        </div>
 
-      <!-- One-on-One Coaching -->
-      <div class="category">
-        <h3>One-on-One Coaching</h3>
-        <article>
-          <img
-            src="images/personal-development.png"
-            alt="Teal icon of a smiling face"
-          />
-          <h4>Personal Development</h4>
-          <p>Identify and overcome obstacles holding you back from living your best life...</p>
-        </article>
-        <article>
-          <img
-            src="images/career-coaching.png"
-            alt="Lavender icon of a briefcase"
-          />
-          <h4>Career Coaching</h4>
-          <p>Feeling stuck in your career? We'll help you clarify your goals...</p>
-        </article>
-        <article>
-          <img
-            src="images/relationship-coaching.png"
-            alt="Pink icon of a heart"
-          />
-          <h4>Relationship Coaching</h4>
-          <p>Enhance your relationships with better communication and empathy...</p>
-        </article>
-      </div>
+        <!-- Group Coaching -->
+        <div class="category">
+          <h3>Group Coaching</h3>
+          <article>
+            <img
+              src="images/supportive-community.png"
+              alt="Yellow icon of hands clasping"
+            />
+            <h4>Supportive Community</h4>
+            <p>Join a group of like-minded individuals on a similar journey...</p>
+          </article>
+          <article>
+            <img
+              src="images/focused-session.png"
+              alt="Teal icon of a clock face"
+            />
+            <h4>Focused Sessions</h4>
+            <p>Our group coaching sessions focus on specific themes like confidence-building...</p>
+          </article>
+        </div>
 
-      <!-- Group Coaching -->
-      <div class="category">
-        <h3>Group Coaching</h3>
-        <article>
-          <img
-            src="images/supportive-community.png"
-            alt="Yellow icon of hands clasping"
-          />
-          <h4>Supportive Community</h4>
-          <p>Join a group of like-minded individuals on a similar journey...</p>
-        </article>
-        <article>
-          <img
-            src="images/focused-session.png"
-            alt="Teal icon of a clock face"
-          />
-          <h4>Focused Sessions</h4>
-          <p>Our group coaching sessions focus on specific themes like...</p>
-        </article>
-      </div>
+        <!-- Workshops & Seminars -->
+        <div class="category">
+          <h3>Workshops & Seminars</h3>
+          <article>
+            <img
+              src="images/interactive-learning.png"
+              alt="Lavender icon of text conversation"
+            />
+            <h4>Interactive Learning</h4>
+            <p>Participate in our interactive workshops and seminars covering a range of topics...</p>
+          </article>
+        </div>
 
-      <!-- Workshops & Seminars -->
-      <div class="category">
-        <h3>Workshops & Seminars</h3>
-        <article>
-          <img
-            src="images/interactive-learning.png"
-            alt="Lavender icon of text conversation"
-          />
-          <h4>Interactive Learning</h4>
-          <p>Participate in our interactive workshops and seminars...</p>
-        </article>
-      </div>
-
-      <!-- Online Courses -->
-      <div class="category">
-        <h3>Online Courses</h3>
-        <article>
-          <img
-            src="images/flexible-learning.png"
-            alt="Pink icon of a curly arrow"
-          />
-          <h4>Flexible Learning</h4>
-          <p>Access our online courses at your convenience...</p>
-        </article>
+        <!-- Online Courses -->
+        <div class="category">
+          <h3>Online Courses</h3>
+          <article>
+            <img
+              src="images/flexible-learning.png"
+              alt="Pink icon of a curly arrow"
+            />
+            <h4>Flexible Learning</h4>
+            <p>Access our online courses at your convenience...</p>
+          </article>
+        </div>
       </div>
     </section>
 
-    <!-- Why Choose Us -->
     <section id="why-choose-us">
       <h2>Why Choose Us</h2>
       <div class="why-grid">
@@ -119,7 +118,6 @@
       </div>
     </section>
 
-    <!-- Pricing -->
     <section id="pricing">
       <h2>Pricing</h2>
       <div class="pricing-grid">
@@ -166,7 +164,6 @@
       </div>
     </section>
 
-    <!-- CTA: Take the First Step Today -->
     <section id="contact">
       <h2>Take the First Step Today</h2>
       <p>Your journey to a more fulfilling life begins with a single step...</p>
@@ -176,7 +173,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2024 Path to Success</p>
     <p><a href="#">Terms and Conditions</a></p>
