--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     name="description"
     content="Unlock your full potential with personalized life coaching. Discover services tailored to your personal, career, and relationship growth."
   />
+  <!-- Link to the external CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -26,9 +27,9 @@
   </header>
 
   <main>
+    <!-- Services Section -->
     <section id="services">
       <h2>Our Services</h2>
-      <!-- New wrapper for the four columns -->
       <div class="services-grid">
         <!-- One-on-One Coaching -->
         <div class="category">
@@ -108,6 +109,7 @@
       </div>
     </section>
 
+    <!-- Why Choose Us -->
     <section id="why-choose-us">
       <h2>Why Choose Us</h2>
       <div class="why-grid">
@@ -118,6 +120,7 @@
       </div>
     </section>
 
+    <!-- Pricing -->
     <section id="pricing">
       <h2>Pricing</h2>
       <div class="pricing-grid">
@@ -164,6 +167,7 @@
       </div>
     </section>
 
+    <!-- Contact -->
     <section id="contact">
       <h2>Take the First Step Today</h2>
       <p>Your journey to a more fulfilling life begins with a single step...</p>
@@ -173,6 +177,7 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2024 Path to Success</p>
     <p><a href="#">Terms and Conditions</a></p>
