--- a/index.html
+++ b/index.html
@@ -34,77 +34,85 @@
         <!-- One-on-One Coaching -->
         <div class="category">
           <h3>One-on-One Coaching</h3>
-          <article>
-            <img
-              src="images/personal-development.png"
-              alt="Teal icon of a smiling face"
-            />
-            <h4>Personal Development</h4>
-            <p>Identify and overcome obstacles holding you back from living your best life...</p>
-          </article>
-          <article>
-            <img
-              src="images/career-coaching.png"
-              alt="Lavender icon of a briefcase"
-            />
-            <h4>Career Coaching</h4>
-            <p>Feeling stuck in your career? We'll help you clarify your goals...</p>
-          </article>
-          <article>
-            <img
-              src="images/relationship-coaching.png"
-              alt="Pink icon of a heart"
-            />
-            <h4>Relationship Coaching</h4>
-            <p>Enhance your relationships with better communication and empathy...</p>
-          </article>
+          <div class="category-content">
+            <article>
+              <img
+                src="images/personal-development.png"
+                alt="Teal icon of a smiling face"
+              />
+              <h4>Personal Development</h4>
+              <p>Identify and overcome obstacles holding you back from living your best life...</p>
+            </article>
+            <article>
+              <img
+                src="images/career-coaching.png"
+                alt="Lavender icon of a briefcase"
+              />
+              <h4>Career Coaching</h4>
+              <p>Feeling stuck in your career? We'll help you clarify your goals...</p>
+            </article>
+            <article>
+              <img
+                src="images/relationship-coaching.png"
+                alt="Pink icon of a heart"
+              />
+              <h4>Relationship Coaching</h4>
+              <p>Enhance your relationships with better communication and empathy...</p>
+            </article>
+          </div>
         </div>
 
         <!-- Group Coaching -->
         <div class="category">
           <h3>Group Coaching</h3>
-          <article>
-            <img
-              src="images/supportive-community.png"
-              alt="Yellow icon of hands clasping"
-            />
-            <h4>Supportive Community</h4>
-            <p>Join a group of like-minded individuals on a similar journey...</p>
-          </article>
-          <article>
-            <img
-              src="images/focused-session.png"
-              alt="Teal icon of a clock face"
-            />
-            <h4>Focused Sessions</h4>
-            <p>Our group coaching sessions focus on specific themes like confidence-building...</p>
-          </article>
+          <div class="category-content">
+            <article>
+              <img
+                src="images/supportive-community.png"
+                alt="Yellow icon of hands clasping"
+              />
+              <h4>Supportive Community</h4>
+              <p>Join a group of like-minded individuals on a similar journey...</p>
+            </article>
+            <article>
+              <img
+                src="images/focused-session.png"
+                alt="Teal icon of a clock face"
+              />
+              <h4>Focused Sessions</h4>
+              <p>Our group coaching sessions focus on specific themes like confidence-building...</p>
+            </article>
+          </div>
         </div>
 
         <!-- Workshops & Seminars -->
         <div class="category">
           <h3>Workshops & Seminars</h3>
-          <article>
-            <img
-              src="images/interactive-learning.png"
-              alt="Lavender icon of text conversation"
-            />
-            <h4>Interactive Learning</h4>
-            <p>Participate in our interactive workshops and seminars covering a range of topics...</p>
-          </article>
+          <div class="category-content">
+            <article>
+              <img
+                src="images/interactive-learning.png"
+                alt="Lavender icon of text conversation"
+              />
+              <h4>Interactive Learning</h4>
+              <p>Participate in our interactive workshops and seminars covering a range of topics...</p>
+            </article>
+          </div>
         </div>
 
         <!-- Online Courses -->
         <div class="category">
           <h3>Online Courses</h3>
-          <article>
-            <img
-              src="images/flexible-learning.png"
-              alt="Pink icon of a curly arrow"
-            />
-            <h4>Flexible Learning</h4>
-            <p>Access our online courses at your convenience...</p>
-          </article>
+          <div class="category-content">
+            <article>
+              <img
+                src="images/flexible-learning.png"
+                alt="Pink icon of a curly arrow"
+              />
+              <h4>Flexible Learning</h4>
+              <p>Access our online courses at your convenience...</p>
+            </article>
+          </div>
         </div>
       </div>
     </section>
@@ -124,46 +132,59 @@
     <section id="pricing">
       <h2>Pricing</h2>
       <div class="pricing-grid">
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Session</td><td>$150</td></tr>
-            <tr><td>Monthly Package</td><td>$550</td></tr>
-            <tr><td>3-month Package</td><td>$1500</td></tr>
-          </tbody>
-        </table>
-
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Session</td><td>$75</td></tr>
-            <tr><td>Monthly Package</td><td>$250</td></tr>
-          </tbody>
-        </table>
-
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Workshop</td><td>$150</td></tr>
-            <tr><td>Seminar Series</td><td>$250</td></tr>
-          </tbody>
-        </table>
-
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Workshop</td><td>$150</td></tr>
-            <tr><td>Webinar Series</td><td>$250</td></tr>
-          </tbody>
-        </table>
+        <!-- One-on-One Coaching -->
+        <div class="pricing-column">
+          <h3>One-on-One Coaching</h3>
+          <table>
+            <thead>
+              <tr><th>Service</th><th>Cost</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>Single Session</td><td>$150</td></tr>
+              <tr><td>Monthly Package</td><td>$550</td></tr>
+              <tr><td>3-month Package</td><td>$1500</td></tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- Group Coaching -->
+        <div class="pricing-column">
+          <h3>Group Coaching</h3>
+          <table>
+            <thead>
+              <tr><th>Service</th><th>Cost</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>Single Session</td><td>$75</td></tr>
+              <tr><td>Monthly Package</td><td>$250</td></tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- Workshops & Seminars -->
+        <div class="pricing-column">
+          <h3>Workshops & Seminars</h3>
+          <table>
+            <thead>
+              <tr><th>Service</th><th>Cost</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>Single Workshop</td><td>$150</td></tr>
+              <tr><td>Seminar Series</td><td>$250</td></tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- Online Courses -->
+        <div class="pricing-column">
+          <h3>Online Courses</h3>
+          <table>
+            <thead>
+              <tr><th>Service</th><th>Cost</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>Single Workshop</td><td>$150</td></tr>
+              <tr><td>Webinar Series</td><td>$250</td></tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </section>
 
