--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             />
             <div>
               <h4>Personal Development</h4>
-              <p>Identify and overcome obstacles holding you back from living your best life...</p>
+              <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
             </div>
           </article>
           <article>
@@ -51,7 +51,7 @@
             />
             <div>
               <h4>Career Coaching</h4>
-              <p>Feeling stuck in your career? We'll help you clarify your goals...</p>
+              <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
             </div>
           </article>
           <article>
@@ -61,7 +61,7 @@
             />
             <div>
               <h4>Relationship Coaching</h4>
-              <p>Enhance your relationships with better communication and empathy...</p>
+              <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
             </div>
           </article>
         </div>
@@ -76,7 +76,7 @@
             />
             <div>
               <h4>Supportive Community</h4>
-              <p>Join a group of like-minded individuals on a similar journey...</p>
+              <p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
             </div>
           </article>
           <article>
@@ -86,7 +86,7 @@
             />
             <div>
               <h4>Focused Sessions</h4>
-              <p>Our group coaching sessions focus on specific themes like confidence-building...</p>
+              <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
             </div>
           </article>
         </div>
@@ -101,7 +101,7 @@
             />
             <div>
               <h4>Interactive Learning</h4>
-              <p>Participate in our interactive workshops and seminars covering a range of topics...</p>
+              <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
             </div>
           </article>
         </div>
@@ -116,7 +116,7 @@
             />
             <div>
               <h4>Flexible Learning</h4>
-              <p>Access our online courses at your convenience...</p>
+              <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
             </div>
           </article>
         </div>
