--- a/index.html
+++ b/index.html
@@ -1,200 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Path to Success - Life Coaching</title>
-  <meta
-    name="description"
-    content="Unlock your full potential with personalized life coaching. Discover services tailored to your personal, career, and relationship growth."
-  />
-  <!-- Link to the external CSS -->
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Path to Success</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Path to Success</h1>
-    <div class="subheading">Unlock your full potential with personalized life coaching</div>
-    <nav>
-      <button class="menu-button">Menu</button>
-      <ul>
-        <li><a href="#services">Our Services</a></li>
-        <li><a href="#why-choose-us">Why Choose Us</a></li>
-        <li><a href="#pricing">Prices</a></li>
-        <li><a href="#contact">Take the First Step</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <h1>Path to Success</h1>
+        <p>Unlock your full potential with personalized life coaching</p>
+        <nav>
+            <ul>
+                <li><a href="#services">Our Services</a></li>
+                <li><a href="#why-choose-us">Why Choose Us</a></li>
+                <li><a href="#pricing">Prices</a></li>
+                <li><a href="#contact">Take the First Step</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <!-- Services Section -->
     <section id="services">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <!-- One-on-One Coaching -->
-        <div class="category">
-          <h3>One-on-One Coaching</h3>
-          <article>
-            <img
-              src="images/personal-development.png"
-              alt="Teal icon of a smiling face"
-            />
+        <h2>Our Services</h2>
+        <article>
+            <h3>One-on-One Coaching</h3>
             <div>
-              <h4>Personal Development</h4>
-              <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
+                <img src="images/personal-development.png" alt="teal icon of a smiling face">
+                <h4>Personal Development</h4>
+                <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
             </div>
-          </article>
-          <article>
-            <img
-              src="images/career-coaching.png"
-              alt="Lavender icon of a briefcase"
-            />
             <div>
-              <h4>Career Coaching</h4>
-              <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
+                <img src="images/career-coaching.png" alt="lavender icon of a briefcase">
+                <h4>Career Coaching</h4>
+                <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
             </div>
-          </article>
-          <article>
-            <img
-              src="images/relationship-coaching.png"
-              alt="Pink icon of a heart"
-            />
             <div>
-              <h4>Relationship Coaching</h4>
-              <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
+                <img src="images/relationship-coaching.png" alt="pink icon of a heart">
+                <h4>Relationship Coaching</h4>
+                <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
             </div>
-          </article>
-        </div>
+        </article>
 
-        <!-- Group Coaching -->
-        <div class="category">
-          <h3>Group Coaching</h3>
-          <article>
-            <img
-              src="images/supportive-community.png"
-              alt="Yellow icon of hands clasping"
-            />
+        <article>
+            <h3>Group Coaching</h3>
             <div>
-              <h4>Supportive Community</h4>
-              <p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
+                <img src="images/supportive-community.png" alt="yellow icon of hands clasping">
+                <h4>Supportive Community</h4>
+                <p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
             </div>
-          </article>
-          <article>
-            <img
-              src="images/focused-session.png"
-              alt="Teal icon of a clock face"
-            />
             <div>
-              <h4>Focused Sessions</h4>
-              <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
+                <img src="images/focused-session.png" alt="teal icon of a clock face">
+                <h4>Focused Sessions</h4>
+                <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
             </div>
-          </article>
-        </div>
+        </article>
 
-        <!-- Workshops & Seminars -->
-        <div class="category">
-          <h3>Workshops & Seminars</h3>
-          <article>
-            <img
-              src="images/interactive-learning.png"
-              alt="Lavender icon of text conversation"
-            />
+        <article>
+            <h3>Workshops & Seminars</h3>
             <div>
-              <h4>Interactive Learning</h4>
-              <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
+                <img src="images/interactive-learning.png" alt="lavender icon of text conversation">
+                <h4>Interactive Learning</h4>
+                <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
             </div>
-          </article>
-        </div>
+        </article>
 
-        <!-- Online Courses -->
-        <div class="category">
-          <h3>Online Courses</h3>
-          <article>
-            <img
-              src="images/flexible-learning.png"
-              alt="Pink icon of a curly arrow"
-            />
+        <article>
+            <h3>Online Courses</h3>
             <div>
-              <h4>Flexible Learning</h4>
-              <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
+                <img src="images/flexible-learning.png" alt="pink icon of a curly arrow">
+                <h4>Flexible Learning</h4>
+                <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
             </div>
-          </article>
-        </div>
-      </div>
+        </article>
     </section>
 
-    <!-- Why Choose Us -->
     <section id="why-choose-us">
-      <h2>Why Choose Us</h2>
-      <div class="why-grid">
-        <div class="why-box">Personalized Approach</div>
-        <div class="why-box">Proven Results</div>
-        <div class="why-box">Supportive Environment</div>
-        <div class="why-box">Flexible Options</div>
-      </div>
+        <h2>Why Choose Us</h2>
+        <ul>
+            <li>Personalized Approach</li>
+            <li>Proven Results</li>
+            <li>Supportive Environment</li>
+            <li>Flexible Options</li>
+        </ul>
     </section>
 
-    <!-- Pricing -->
     <section id="pricing">
-      <h2>Pricing</h2>
-      <div class="pricing-grid">
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Session</td><td>$150</td></tr>
-            <tr><td>Monthly Package</td><td>$550</td></tr>
-            <tr><td>3-month Package</td><td>$1500</td></tr>
-          </tbody>
-        </table>
+        <h2>Pricing</h2>
+        <article>
+            <h3>One-on-One Coaching</h3>
+            <table>
+                <tr><th>Service</th><th>Cost</th></tr>
+                <tr><td>Single Session</td><td>$150</td></tr>
+                <tr><td>Monthly Package</td><td>$550</td></tr>
+                <tr><td>3-month Package</td><td>$1500</td></tr>
+            </table>
+        </article>
 
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Session</td><td>$75</td></tr>
-            <tr><td>Monthly Package</td><td>$250</td></tr>
-          </tbody>
-        </table>
+        <article>
+            <h3>Group Coaching</h3>
+            <table>
+                <tr><th>Service</th><th>Cost</th></tr>
+                <tr><td>Single Session</td><td>$75</td></tr>
+                <tr><td>Monthly Package</td><td>$250</td></tr>
+            </table>
+        </article>
 
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Workshop</td><td>$150</td></tr>
-            <tr><td>Seminar Series</td><td>$250</td></tr>
-          </tbody>
-        </table>
+        <article>
+            <h3>Workshops & Seminars</h3>
+            <table>
+                <tr><th>Service</th><th>Cost</th></tr>
+                <tr><td>Single Workshop</td><td>$150</td></tr>
+                <tr><td>Seminar Series</td><td>$250</td></tr>
+            </table>
+        </article>
 
-        <table>
-          <thead>
-            <tr><th>Service</th><th>Cost</th></tr>
-          </thead>
-          <tbody>
-            <tr><td>Single Workshop</td><td>$150</td></tr>
-            <tr><td>Webinar Series</td><td>$250</td></tr>
-          </tbody>
-        </table>
-      </div>
+        <article>
+            <h3>Online Courses</h3>
+            <table>
+                <tr><th>Service</th><th>Cost</th></tr>
+                <tr><td>Single Course</td><td>$150</td></tr>
+                <tr><td>Webinar Series</td><td>$250</td></tr>
+            </table>
+        </article>
     </section>
 
-    <!-- Contact -->
     <section id="contact">
-      <h2>Take the First Step Today</h2>
-      <p>Your journey to a more fulfilling life begins with a single step...</p>
-      <div class="schedule-button-container">
-        <button class="schedule-button">Schedule Now</button>
-      </div>
+        <h2>Take the First Step Today</h2>
+        <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
+        <button>Schedule Now</button>
     </section>
-  </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2024 Path to Success</p>
-    <p><a href="#">Terms and Conditions</a></p>
-  </footer>
+    <footer>
+        <p>Copyright 2024</p>
+        <a href="#">Terms and Conditions</a>
+    </footer>
 </body>
 </html>
