--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 </head>
 <body>
     <header>
-        <h1>Path to Success</h1>
-        <p>Unlock your full potential with personalized life coaching</p>
-        <div class="nav-container">
+        <!-- Menu Button (Visible on Small & Medium Screens) -->
+        <button class="menu-button">MENU</button>
+
+        <!-- Navigation Bar (Hidden by Default, Shown on Large & XL Screens) -->
+        <div class="top-nav">
             <nav>
                 <ul>
-                    <li><a href="#services">Our Services</a></li>
-                    <li><a href="#why-choose-us">Why Choose Us</a></li>
-                    <li><a href="#pricing">Prices</a></li>
-                    <li><a href="#contact">Take the First Step</a></li>
+                    <li><a href="#services">OUR SERVICES</a></li>
+                    <li><a href="#why-choose-us">WHY CHOOSE US</a></li>
+                    <li><a href="#pricing">PRICES</a></li>
+                    <li><a href="#contact">TAKE THE FIRST STEP</a></li>
                 </ul>
             </nav>
+        </div>
+
+        <!-- Header Content -->
+        <div class="header-content">
+            <h1>Path to Success</h1>
+            <p>Unlock your full potential with personalized life coaching</p>
         </div>
     </header>
 
